# cmpx-spfunc

./: .gitignore  LICENSE  README.md  main.cpp  meson.build
.github/workflows/: unittest.yml
cmpfunc_cpp/include/: complex_functions.h  complex_operators.h  meson.build
cmpfunc_cpp/src/: complex_functions.cpp  complex_operators.cpp  meson.build
cmpfunc_rust/: Cargo.toml
examples/: test_spfunc.cpp
include/: complex_functions.h  meson.build
src/: complex_functions.cpp
tests/: meson.build  test_spfunc.cpp  unittests.cpp
